Ucpf.Languages.Lua/LuaParser.cs
using System.Collections.Generic;
// $ANTLR 3.2 Sep 23, 2009 12:02:23 Lua.g 2010-12-03 00:06:09

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


using System;
using Antlr.Runtime;
using Ucpf.Common.Languages.Common.Antlr;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;

using IDictionary	= System.Collections.IDictionary;
using Hashtable 	= System.Collections.Hashtable;

using Antlr.Runtime.Tree;

public partial class LuaParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"NAME", 
		"INT", 
		"FLOAT", 
		"EXP", 
		"HEX", 
		"NORMALSTRING", 
		"CHARSTRING", 
		"LONGSTRING", 
		"EscapeSequence", 
		"UnicodeEscape", 
		"OctalEscape", 
		"HexDigit", 
		"COMMENT", 
		"LINE_COMMENT", 
		"WS", 
		"NEWLINE", 
		"';'", 
		"'='", 
		"'do'", 
		"'end'", 
		"'while'", 
		"'repeat'", 
		"'until'", 
		"'if'", 
		"'then'", 
		"'elseif'", 
		"'else'", 
		"'for'", 
		"','", 
		"'in'", 
		"'function'", 
		"'local'", 
		"'return'", 
		"'break'", 
		"'.'", 
		"':'", 
		"'nil'", 
		"'false'", 
		"'true'", 
		"'...'", 
		"'('", 
		"')'", 
		"'['", 
		"']'", 
		"'{'", 
		"'}'", 
		"'+'", 
		"'-'", 
		"'*'", 
		"'/'", 
		"'^'", 
		"'%'", 
		"'..'", 
		"'<'", 
		"'<='", 
		"'>'", 
		"'>='", 
		"'=='", 
		"'~='", 
		"'and'", 
		"'or'", 
		"'not'", 
		"'#'"
    };

    public const int T__66 = 66;
    public const int T__64 = 64;
    public const int T__29 = 29;
    public const int T__65 = 65;
    public const int T__28 = 28;
    public const int T__62 = 62;
    public const int T__27 = 27;
    public const int T__63 = 63;
    public const int T__26 = 26;
    public const int T__25 = 25;
    public const int T__24 = 24;
    public const int T__23 = 23;
    public const int T__22 = 22;
    public const int T__21 = 21;
    public const int T__20 = 20;
    public const int FLOAT = 6;
    public const int T__61 = 61;
    public const int T__60 = 60;
    public const int EOF = -1;
    public const int HexDigit = 15;
    public const int T__55 = 55;
    public const int T__56 = 56;
    public const int T__57 = 57;
    public const int NAME = 4;
    public const int T__58 = 58;
    public const int T__51 = 51;
    public const int T__52 = 52;
    public const int T__53 = 53;
    public const int T__54 = 54;
    public const int EXP = 7;
    public const int HEX = 8;
    public const int T__59 = 59;
    public const int COMMENT = 16;
    public const int T__50 = 50;
    public const int T__42 = 42;
    public const int T__43 = 43;
    public const int T__40 = 40;
    public const int T__41 = 41;
    public const int T__46 = 46;
    public const int T__47 = 47;
    public const int T__44 = 44;
    public const int T__45 = 45;
    public const int LINE_COMMENT = 17;
    public const int T__48 = 48;
    public const int T__49 = 49;
    public const int CHARSTRING = 10;
    public const int INT = 5;
    public const int LONGSTRING = 11;
    public const int T__30 = 30;
    public const int NORMALSTRING = 9;
    public const int T__31 = 31;
    public const int T__32 = 32;
    public const int WS = 18;
    public const int T__33 = 33;
    public const int T__34 = 34;
    public const int NEWLINE = 19;
    public const int T__35 = 35;
    public const int T__36 = 36;
    public const int T__37 = 37;
    public const int T__38 = 38;
    public const int T__39 = 39;
    public const int UnicodeEscape = 13;
    public const int OctalEscape = 14;
    public const int EscapeSequence = 12;

    // delegates
    // delegators



        public LuaParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public LuaParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
        }
        
    protected XmlTreeAdaptor adaptor = new XmlTreeAdaptor();

    public XmlTreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return LuaParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "Lua.g"; }
    }


    public class chunk_return : XParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "chunk"
    // Lua.g:23:1: chunk : ( stat ( ';' )? )* ( laststat ( ';' )? )? ;
    public LuaParser.chunk_return chunk() // throws RecognitionException [1]
    {   
        LuaParser.chunk_return retval = new LuaParser.chunk_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken char_literal2 = null;
        IToken char_literal4 = null;
        LuaParser.stat_return stat1 = default(LuaParser.stat_return);

        LuaParser.laststat_return laststat3 = default(LuaParser.laststat_return);


        object char_literal2_tree=null;
        object char_literal4_tree=null;

        try 
    	{
            // Lua.g:23:7: ( ( stat ( ';' )? )* ( laststat ( ';' )? )? )
            // Lua.g:23:9: ( stat ( ';' )? )* ( laststat ( ';' )? )?
            {
            	root_0 = (object)adaptor.GetNilNode();

            	// Lua.g:23:9: ( stat ( ';' )? )*
            	do 
            	{
            	    int alt2 = 2;
            	    int LA2_0 = input.LA(1);

            	    if ( (LA2_0 == NAME || LA2_0 == 22 || (LA2_0 >= 24 && LA2_0 <= 25) || LA2_0 == 27 || LA2_0 == 31 || (LA2_0 >= 34 && LA2_0 <= 35) || LA2_0 == 44) )
            	    {
            	        alt2 = 1;
            	    }


            	    switch (alt2) 
            		{
            			case 1 :
            			    // Lua.g:23:10: stat ( ';' )?
            			    {
            			    	PushFollow(FOLLOW_stat_in_chunk37);
            			    	stat1 = stat();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return retval;
            			    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, stat1.Tree, stat1, retval);
            			    	// Lua.g:23:15: ( ';' )?
            			    	int alt1 = 2;
            			    	int LA1_0 = input.LA(1);

            			    	if ( (LA1_0 == 20) )
            			    	{
            			    	    alt1 = 1;
            			    	}
            			    	switch (alt1) 
            			    	{
            			    	    case 1 :
            			    	        // Lua.g:23:16: ';'
            			    	        {
            			    	        	char_literal2=(IToken)Match(input,20,FOLLOW_20_in_chunk40); if (state.failed) return retval;
            			    	        	if ( state.backtracking == 0 )
            			    	        	{char_literal2_tree = (object)adaptor.Create(char_literal2, retval);
            			    	        		adaptor.AddChild(root_0, char_literal2_tree);
            			    	        	}

            			    	        }
            			    	        break;

            			    	}


            			    }
            			    break;

            			default:
            			    goto loop2;
            	    }
            	} while (true);

            	loop2:
            		;	// Stops C# compiler whining that label 'loop2' has no statements

            	// Lua.g:23:24: ( laststat ( ';' )? )?
            	int alt4 = 2;
            	int LA4_0 = input.LA(1);

            	if ( ((LA4_0 >= 36 && LA4_0 <= 37)) )
            	{
            	    alt4 = 1;
            	}
            	switch (alt4) 
            	{
            	    case 1 :
            	        // Lua.g:23:25: laststat ( ';' )?
            	        {
            	        	PushFollow(FOLLOW_laststat_in_chunk47);
            	        	laststat3 = laststat();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return retval;
            	        	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, laststat3.Tree, laststat3, retval);
            	        	// Lua.g:23:34: ( ';' )?
            	        	int alt3 = 2;
            	        	int LA3_0 = input.LA(1);

            	        	if ( (LA3_0 == 20) )
            	        	{
            	        	    alt3 = 1;
            	        	}
            	        	switch (alt3) 
            	        	{
            	        	    case 1 :
            	        	        // Lua.g:23:35: ';'
            	        	        {
            	        	        	char_literal4=(IToken)Match(input,20,FOLLOW_20_in_chunk50); if (state.failed) return retval;
            	        	        	if ( state.backtracking == 0 )
            	        	        	{char_literal4_tree = (object)adaptor.Create(char_literal4, retval);
            	        	        		adaptor.AddChild(root_0, char_literal4_tree);
            	        	        	}

            	        	        }
            	        	        break;

            	        	}


            	        }
            	        break;

            	}


            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "chunk"

    public class block_return : XParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "block"
    // Lua.g:25:1: block : chunk ;
    public LuaParser.block_return block() // throws RecognitionException [1]
    {   
        LuaParser.block_return retval = new LuaParser.block_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        LuaParser.chunk_return chunk5 = default(LuaParser.chunk_return);



        try 
    	{
            // Lua.g:25:7: ( chunk )
            // Lua.g:25:9: chunk
            {
            	root_0 = (object)adaptor.GetNilNode();

            	PushFollow(FOLLOW_chunk_in_block62);
            	chunk5 = chunk();
            	state.followingStackPointer--;
            	if (state.failed) return retval;
            	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, chunk5.Tree, chunk5, retval);

            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "block"

    public class stat_return : XParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "stat"
    // Lua.g:27:1: stat : ( varlist1 '=' explist1 | functioncall | 'do' block 'end' | 'while' exp 'do' block 'end' | 'repeat' block 'until' exp | 'if' exp 'then' block ( 'elseif' exp 'then' block )* ( 'else' block )? 'end' | 'for' NAME '=' exp ',' exp ( ',' exp )? 'do' block 'end' | 'for' namelist 'in' explist1 'do' block 'end' | 'function' funcname funcbody | 'local' 'function' NAME funcbody | 'local' namelist ( '=' explist1 )? );
    public LuaParser.stat_return stat() // throws RecognitionException [1]
    {   
        LuaParser.stat_return retval = new LuaParser.stat_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken char_literal7 = null;
        IToken string_literal10 = null;
        IToken string_literal12 = null;
        IToken string_literal13 = null;
        IToken string_literal15 = null;
        IToken string_literal17 = null;
        IToken string_literal18 = null;
        IToken string_literal20 = null;
        IToken string_literal22 = null;
        IToken string_literal24 = null;
        IToken string_literal26 = null;
        IToken string_literal28 = null;
        IToken string_literal30 = null;
        IToken string_literal32 = null;
        IToken string_literal33 = null;
        IToken NAME34 = null;
        IToken char_literal35 = null;
        IToken char_literal37 = null;
        IToken char_literal39 = null;
        IToken string_literal41 = null;
        IToken string_literal43 = null;
        IToken string_literal44 = null;
        IToken string_literal46 = null;
        IToken string_literal48 = null;
        IToken string_literal50 = null;
        IToken string_literal51 = null;
        IToken string_literal54 = null;
        IToken string_literal55 = null;
        IToken NAME56 = null;
        IToken string_literal58 = null;
        IToken char_literal60 = null;
        LuaParser.varlist1_return varlist16 = default(LuaParser.varlist1_return);

        LuaParser.explist1_return explist18 = default(LuaParser.explist1_return);

        LuaParser.functioncall_return functioncall9 = default(LuaParser.functioncall_return);

        LuaParser.block_return block11 = default(LuaParser.block_return);

        LuaParser.exp_return exp14 = default(LuaParser.exp_return);

        LuaParser.block_return block16 = default(LuaParser.block_return);

        LuaParser.block_return block19 = default(LuaParser.block_return);

        LuaParser.exp_return exp21 = default(LuaParser.exp_return);

        LuaParser.exp_return exp23 = default(LuaParser.exp_return);

        LuaParser.block_return block25 = default(LuaParser.block_return);

        LuaParser.exp_return exp27 = default(LuaParser.exp_return);

        LuaParser.block_return block29 = default(LuaParser.block_return);

        LuaParser.block_return block31 = default(LuaParser.block_return);

        LuaParser.exp_return exp36 = default(LuaParser.exp_return);

        LuaParser.exp_return exp38 = default(LuaParser.exp_return);

        LuaParser.exp_return exp40 = default(LuaParser.exp_return);

        LuaParser.block_return block42 = default(LuaParser.block_return);

        LuaParser.namelist_return namelist45 = default(LuaParser.namelist_return);

        LuaParser.explist1_return explist147 = default(LuaParser.explist1_return);

        LuaParser.block_return block49 = default(LuaParser.block_return);

        LuaParser.funcname_return funcname52 = default(LuaParser.funcname_return);

        LuaParser.funcbody_return funcbody53 = default(LuaParser.funcbody_return);

        LuaParser.funcbody_return funcbody57 = default(LuaParser.funcbody_return);

        LuaParser.namelist_return namelist59 = default(LuaParser.namelist_return);

        LuaParser.explist1_return explist161 = default(LuaParser.explist1_return);


        object char_literal7_tree=null;
        object string_literal10_tree=null;
        object string_literal12_tree=null;
        object string_literal13_tree=null;
        object string_literal15_tree=null;
        object string_literal17_tree=null;
        object string_literal18_tree=null;
        object string_literal20_tree=null;
        object string_literal22_tree=null;
        object string_literal24_tree=null;
        object string_literal26_tree=null;
        object string_literal28_tree=null;
        object string_literal30_tree=null;
        object string_literal32_tree=null;
        object string_literal33_tree=null;
        object NAME34_tree=null;
        object char_literal35_tree=null;
        object char_literal37_tree=null;
        object char_literal39_tree=null;
        object string_literal41_tree=null;
        object string_literal43_tree=null;
        object string_literal44_tree=null;
        object string_literal46_tree=null;
        object string_literal48_tree=null;
        object string_literal50_tree=null;
        object string_literal51_tree=null;
        object string_literal54_tree=null;
        object string_literal55_tree=null;
        object NAME56_tree=null;
        object string_literal58_tree=null;
        object char_literal60_tree=null;

        try 
    	{
            // Lua.g:27:6: ( varlist1 '=' explist1 | functioncall | 'do' block 'end' | 'while' exp 'do' block 'end' | 'repeat' block 'until' exp | 'if' exp 'then' block ( 'elseif' exp 'then' block )* ( 'else' block )? 'end' | 'for' NAME '=' exp ',' exp ( ',' exp )? 'do' block 'end' | 'for' namelist 'in' explist1 'do' block 'end' | 'function' funcname funcbody | 'local' 'function' NAME funcbody | 'local' namelist ( '=' explist1 )? )
            int alt9 = 11;
            alt9 = dfa9.Predict(input);
            switch (alt9) 
            {
                case 1 :
                    // Lua.g:27:9: varlist1 '=' explist1
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_varlist1_in_stat71);
                    	varlist16 = varlist1();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, varlist16.Tree, varlist16, retval);
                    	char_literal7=(IToken)Match(input,21,FOLLOW_21_in_stat73); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{char_literal7_tree = (object)adaptor.Create(char_literal7, retval);
                    		adaptor.AddChild(root_0, char_literal7_tree);
                    	}
                    	PushFollow(FOLLOW_explist1_in_stat75);
                    	explist18 = explist1();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, explist18.Tree, explist18, retval);

                    }
                    break;
                case 2 :
                    // Lua.g:28:2: functioncall
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_functioncall_in_stat81);
                    	functioncall9 = functioncall();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, functioncall9.Tree, functioncall9, retval);

                    }
                    break;
                case 3 :
                    // Lua.g:29:2: 'do' block 'end'
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	string_literal10=(IToken)Match(input,22,FOLLOW_22_in_stat87); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{string_literal10_tree = (object)adaptor.Create(string_literal10, retval);
                    		adaptor.AddChild(root_0, string_literal10_tree);
                    	}
                    	PushFollow(FOLLOW_block_in_stat89);
                    	block11 = block();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, block11.Tree, block11, retval);
                    	string_literal12=(IToken)Match(input,23,FOLLOW_23_in_stat91); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{string_literal12_tree = (object)adaptor.Create(string_literal12, retval);
                    		adaptor.AddChild(root_0, string_literal12_tree);
                    	}

                    }
                    break;
                case 4 :
                    // Lua.g:30:2: 'while' exp 'do' block 'end'
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	string_literal13=(IToken)Match(input,24,FOLLOW_24_in_stat97); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{string_literal13_tree = (object)adaptor.Create(string_literal13, retval);
                    		adaptor.AddChild(root_0, string_literal13_tree);
                    	}
                    	PushFollow(FOLLOW_exp_in_stat99);
                    	exp14 = exp();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, exp14.Tree, exp14, retval);
                    	string_literal15=(IToken)Match(input,22,FOLLOW_22_in_stat101); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{string_literal15_tree = (object)adaptor.Create(string_literal15, retval);
                    		adaptor.AddChild(root_0, string_literal15_tree);
                    	}
                    	PushFollow(FOLLOW_block_in_stat103);
                    	block16 = block();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, block16.Tree, block16, retval);
                    	string_literal17=(IToken)Match(input,23,FOLLOW_23_in_stat105); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{string_literal17_tree = (object)adaptor.Create(string_literal17, retval);
                    		adaptor.AddChild(root_0, string_literal17_tree);
                    	}

                    }
                    break;
                case 5 :
                    // Lua.g:31:2: 'repeat' block 'until' exp
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	string_literal18=(IToken)Match(input,25,FOLLOW_25_in_stat111); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{string_literal18_tree = (object)adaptor.Create(string_literal18, retval);
                    		adaptor.AddChild(root_0, string_literal18_tree);
                    	}
                    	PushFollow(FOLLOW_block_in_stat113);
                    	block19 = block();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, block19.Tree, block19, retval);
                    	string_literal20=(IToken)Match(input,26,FOLLOW_26_in_stat115); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{string_literal20_tree = (object)adaptor.Create(string_literal20, retval);
                    		adaptor.AddChild(root_0, string_literal20_tree);
                    	}
                    	PushFollow(FOLLOW_exp_in_stat117);
                    	exp21 = exp();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, exp21.Tree, exp21, retval);

                    }
                    break;
                case 6 :
                    // Lua.g:32:2: 'if' exp 'then' block ( 'elseif' exp 'then' block )* ( 'else' block )? 'end'
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	string_literal22=(IToken)Match(input,27,FOLLOW_27_in_stat123); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{string_literal22_tree = (object)adaptor.Create(string_literal22, retval);
                    		adaptor.AddChild(root_0, string_literal22_tree);
                    	}
                    	PushFollow(FOLLOW_exp_in_stat125);
                    	exp23 = exp();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, exp23.Tree, exp23, retval);
                    	string_literal24=(IToken)Match(input,28,FOLLOW_28_in_stat127); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{string_literal24_tree = (object)adaptor.Create(string_literal24, retval);
                    		adaptor.AddChild(root_0, string_literal24_tree);
                    	}
                    	PushFollow(FOLLOW_block_in_stat129);
                    	block25 = block();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, block25.Tree, block25, retval);
                    	// Lua.g:32:24: ( 'elseif' exp 'then' block )*
                    	do 
                    	{
                    	    int alt5 = 2;
                    	    int LA5_0 = input.LA(1);

                    	    if ( (LA5_0 == 29) )
                    	    {
                    	        alt5 = 1;
                    	    }


                    	    switch (alt5) 
                    		{
                    			case 1 :
                    			    // Lua.g:32:25: 'elseif' exp 'then' block
                    			    {
